# paint_render

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: create_tag.yml  release.yml  rust.yml
models/: log.mtl
res/models/: apple.mtl
res/scenes/: apple.toml  log.toml  monkey.toml  pear.toml  strawberry.toml  teacup.toml  teapot.toml
src/: camera.rs  main.rs  mesh.rs  objects.rs  point_gen.rs  running_average.rs
src/shaders/: color.frag  color.vert  point.frag  point.geom  point.vert  post.frag  post.vert
